compiler/tests/should-fail/UndefinedHost2.via
/* UndefinedNameError */

process Local(host = alice) {}
